Fixed comments spacing.

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -140,8 +140,7 @@ blockquote {
 }
 
 #comments {
-	margin-top: 1.5em;
-	padding-top: 1.5em;
+	margin-top: 0.5em;
 	border-top: medium dotted #ccc;
 	width: 730px;
 }
